creating the environment variables

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -35,5 +35,7 @@
             <a href="#" class="btn btn-verde">Mas Info</a>
         </div>
     </div>
+    VKr3QmaezEZjczy4
+    ivanromero5520
 
 </main>
