Creating the Form for new vacancies

--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -6,7 +6,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
     </style>
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="/css/app.css">
     <title>{{nombrePagina}}</title>
 </head>
 <body>
