adding a new vacancy description input

--- a/views/nueva-vacante.handlebars
+++ b/views/nueva-vacante.handlebars
@@ -29,5 +29,9 @@
             </select>
         </div>
         <h3>Descripción del Puesto</h3>
+        <div class="campo descripcion">
+            <label>Descripción</label>
+            <input type="text" id="x" name="descripcion">
+        </div>
     </form>
 </main>
